--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Pokedex</string>
+    <string name="text_pokemon_name_or_id">Pokemon name or id</string>
+    <string name="text_search">Search</string>
+    <string name="text_pokemon_name">Pokemon name</string>
 </resources>
